src/expr/src/scalar/func/snapshots/mz_expr__scalar__func__binary__test__fallible1.snap
---
source: src/expr/src/scalar/func/binary.rs
expression: "#[sqlfunc(test = true)]\n#[allow(dead_code)]\nfn fallible1(a: f32, b: f32) -> Result<f32, EvalError> {\n    Ok(a + b)\n}\n"
---
#[derive(
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
)]
#[cfg_attr(any(test, feature = "proptest"), derive(proptest_derive::Arbitrary))]
pub struct Fallible1;
impl crate::func::binary::EagerBinaryFunc for Fallible1 {
    type Input<'a> = (f32, f32);
    type Output<'a> = Result<f32, EvalError>;
    fn call<'a>(
        &self,
        (a, b): Self::Input<'a>,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output<'a> {
        fallible1(a, b)
    }
    fn output_sql_type(
        &self,
        input_types: &[mz_repr::SqlColumnType],
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        let non_nullable_input_is_nullable = false
            || input_types.get(0usize).map_or(false, |t| t.nullable)
            || input_types.get(1usize).map_or(false, |t| t.nullable);
        let inputs_nullable = input_types.iter().any(|it| it.nullable);
        let is_null = nullable || non_nullable_input_is_nullable
            || (propagates_nulls && inputs_nullable);
        output.nullable(is_null)
    }
}
impl std::fmt::Display for Fallible1 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(fallible1))
    }
}
impl crate::func::FuncName for Fallible1 {
    const NAME: &'static str = stringify!(fallible1);
    const SQLFUNC: Option<crate::func::SqlFuncSource> = Some(crate::func::SqlFuncSource {
        decl: "#[sqlfunc(test = true)] fn fallible1(a: f32, b: f32) -> Result<f32, EvalError>",
        body_fingerprint: 2454959732691835412u64,
    });
}
#[allow(dead_code)]
fn fallible1(a: f32, b: f32) -> Result<f32, EvalError> {
    Ok(a + b)
}
