src/expr/src/scalar/func/snapshots/mz_expr__scalar__func__binary__test__fallible2.snap
---
source: src/expr/src/scalar/func/binary.rs
expression: "#[sqlfunc(test = true)]\n#[allow(dead_code)]\nfn fallible2(a: Option<f32>, b: Option<f32>) -> Result<f32, EvalError> {\n    Ok(a.unwrap_or_default() + b.unwrap_or_default())\n}\n"
---
#[derive(
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
)]
#[cfg_attr(any(test, feature = "proptest"), derive(proptest_derive::Arbitrary))]
pub struct Fallible2;
impl crate::func::binary::EagerBinaryFunc for Fallible2 {
    type Input<'a> = (Option<f32>, Option<f32>);
    type Output<'a> = Result<f32, EvalError>;
    fn call<'a>(
        &self,
        (a, b): Self::Input<'a>,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output<'a> {
        fallible2(a, b)
    }
    fn output_sql_type(
        &self,
        input_types: &[mz_repr::SqlColumnType],
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        let non_nullable_input_is_nullable = false;
        let inputs_nullable = input_types.iter().any(|it| it.nullable);
        let is_null = nullable || non_nullable_input_is_nullable
            || (propagates_nulls && inputs_nullable);
        output.nullable(is_null)
    }
}
impl std::fmt::Display for Fallible2 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(fallible2))
    }
}
impl crate::func::FuncName for Fallible2 {
    const NAME: &'static str = stringify!(fallible2);
    const SQLFUNC: Option<crate::func::SqlFuncSource> = Some(crate::func::SqlFuncSource {
        decl: "#[sqlfunc(test = true)] fn fallible2(a: Option<f32>, b: Option<f32>) -> Result<f32, EvalError>",
        signature: "fn(Option<f32>, Option<f32>) -> Result<f32, EvalError>",
        body_fingerprint: 7228136515034774834u64,
    });
    fn sqlfunc_input_types() -> Option<Vec<mz_repr::SqlColumnType>> {
        use crate::func::registry::{ProbeColumnType as _, ProbeColumnTypeFallback as _};
        [
            (&crate::func::registry::ColumnTypeProbe::<
                Option<f32>,
            >(::std::marker::PhantomData))
                .column_type(),
            (&crate::func::registry::ColumnTypeProbe::<
                Option<f32>,
            >(::std::marker::PhantomData))
                .column_type(),
        ]
            .into_iter()
            .collect()
    }
}
#[allow(dead_code)]
fn fallible2(a: Option<f32>, b: Option<f32>) -> Result<f32, EvalError> {
    Ok(a.unwrap_or_default() + b.unwrap_or_default())
}
