src/expr/src/scalar/func/snapshots/mz_expr__scalar__func__binary__test__fallible3.snap
---
source: src/expr/src/scalar/func/binary.rs
expression: "#[sqlfunc(test = true)]\n#[allow(dead_code)]\nfn fallible3(a: f32, b: f32) -> Result<Option<f32>, EvalError> {\n    Ok(Some(a + b))\n}\n"
---
#[derive(
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
)]
#[cfg_attr(any(test, feature = "proptest"), derive(proptest_derive::Arbitrary))]
pub struct Fallible3;
impl crate::func::binary::EagerBinaryFunc for Fallible3 {
    type Input<'a> = (f32, f32);
    type Output<'a> = Result<Option<f32>, EvalError>;
    fn call<'a>(
        &self,
        (a, b): Self::Input<'a>,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output<'a> {
        fallible3(a, b)
    }
    fn output_sql_type(
        &self,
        input_types: &[mz_repr::SqlColumnType],
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        let non_nullable_input_is_nullable = false
            || input_types.get(0usize).map_or(false, |t| t.nullable)
            || input_types.get(1usize).map_or(false, |t| t.nullable);
        let inputs_nullable = input_types.iter().any(|it| it.nullable);
        let is_null = nullable || non_nullable_input_is_nullable
            || (propagates_nulls && inputs_nullable);
        output.nullable(is_null)
    }
}
impl std::fmt::Display for Fallible3 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(fallible3))
    }
}
impl crate::func::FuncName for Fallible3 {
    const NAME: &'static str = stringify!(fallible3);
    #[cfg(feature = "func-registry")]
    const SQLFUNC: Option<crate::func::SqlFuncSource> = Some(crate::func::SqlFuncSource {
        decl: "#[sqlfunc(test = true)] fn fallible3(a: f32, b: f32) -> Result<Option<f32>, EvalError>",
        signature: "fn(f32, f32) -> Result<Option<f32>, EvalError>",
        body_fingerprint: 10202159772278290357u64,
    });
    #[cfg(feature = "func-registry")]
    fn sqlfunc_input_types() -> Option<Vec<mz_repr::SqlColumnType>> {
        use crate::func::registry::{ProbeColumnType as _, ProbeColumnTypeFallback as _};
        [
            (&crate::func::registry::ColumnTypeProbe::<f32>(::std::marker::PhantomData))
                .column_type(),
            (&crate::func::registry::ColumnTypeProbe::<f32>(::std::marker::PhantomData))
                .column_type(),
        ]
            .into_iter()
            .collect()
    }
}
#[allow(dead_code)]
fn fallible3(a: f32, b: f32) -> Result<Option<f32>, EvalError> {
    Ok(Some(a + b))
}
