src/expr/src/scalar/func/snapshots/mz_expr__scalar__func__binary__test__infallible1.snap
---
source: src/expr/src/scalar/func/binary.rs
expression: "#[sqlfunc(sqlname = \"INFALLIBLE\", is_infix_op = true, test = true)]\n#[allow(dead_code)]\nfn infallible1(a: f32, b: f32) -> f32 {\n    a + b\n}\n"
---
#[derive(
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
)]
#[cfg_attr(any(test, feature = "proptest"), derive(proptest_derive::Arbitrary))]
pub struct Infallible1;
impl crate::func::binary::EagerBinaryFunc for Infallible1 {
    type Input<'a> = (f32, f32);
    type Output<'a> = f32;
    fn call<'a>(
        &self,
        (a, b): Self::Input<'a>,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output<'a> {
        infallible1(a, b)
    }
    fn output_sql_type(
        &self,
        input_types: &[mz_repr::SqlColumnType],
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        let non_nullable_input_is_nullable = false
            || input_types.get(0usize).map_or(false, |t| t.nullable)
            || input_types.get(1usize).map_or(false, |t| t.nullable);
        let inputs_nullable = input_types.iter().any(|it| it.nullable);
        let is_null = nullable || non_nullable_input_is_nullable
            || (propagates_nulls && inputs_nullable);
        output.nullable(is_null)
    }
    fn is_infix_op(&self) -> bool {
        true
    }
}
impl std::fmt::Display for Infallible1 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("INFALLIBLE")
    }
}
impl crate::func::FuncName for Infallible1 {
    const NAME: &'static str = stringify!(infallible1);
    const SQLFUNC: Option<crate::func::SqlFuncSource> = Some(crate::func::SqlFuncSource {
        decl: "#[sqlfunc(sqlname = \"INFALLIBLE\", is_infix_op = true, test = true)] fn infallible1(a: f32, b: f32) -> f32",
        body_fingerprint: 8548268880028836169u64,
    });
}
#[allow(dead_code)]
fn infallible1(a: f32, b: f32) -> f32 {
    a + b
}
