src/expr/src/scalar/func/snapshots/mz_expr__scalar__func__binary__test__infallible3.snap
---
source: src/expr/src/scalar/func/binary.rs
expression: "#[sqlfunc(test = true)]\n#[allow(dead_code)]\nfn infallible3(a: f32, b: f32) -> Option<f32> {\n    Some(a + b)\n}\n"
---
#[derive(
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
)]
#[cfg_attr(any(test, feature = "proptest"), derive(proptest_derive::Arbitrary))]
pub struct Infallible3;
impl crate::func::binary::EagerBinaryFunc for Infallible3 {
    type Input<'a> = (f32, f32);
    type Output<'a> = Option<f32>;
    fn call<'a>(
        &self,
        (a, b): Self::Input<'a>,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output<'a> {
        infallible3(a, b)
    }
    fn output_sql_type(
        &self,
        input_types: &[mz_repr::SqlColumnType],
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        let non_nullable_input_is_nullable = false
            || input_types.get(0usize).map_or(false, |t| t.nullable)
            || input_types.get(1usize).map_or(false, |t| t.nullable);
        let inputs_nullable = input_types.iter().any(|it| it.nullable);
        let is_null = nullable || non_nullable_input_is_nullable
            || (propagates_nulls && inputs_nullable);
        output.nullable(is_null)
    }
}
impl std::fmt::Display for Infallible3 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(infallible3))
    }
}
impl crate::func::FuncName for Infallible3 {
    const NAME: &'static str = stringify!(infallible3);
    const SQLFUNC: Option<crate::func::SqlFuncSource> = Some(crate::func::SqlFuncSource {
        decl: "#[sqlfunc(test = true)] fn infallible3(a: f32, b: f32) -> Option<f32>",
        body_fingerprint: 6024937414198307004u64,
    });
}
#[allow(dead_code)]
fn infallible3(a: f32, b: f32) -> Option<f32> {
    Some(a + b)
}
